feat: create user setting functionality
